--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
 
-    background-image: url("imagenes/fondo.png");
+    background-image: url("imagenes/playa.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -12,11 +12,11 @@ body:before {
     content: "";
     height: 50px;
     width: 100%;
-    min-height: 100vh;
+    min-height: 100vh;/*view port height*/
     position: absolute;
 
-    background: rgb(64, 124, 58);
-    opacity: 0.5;
+    background: rgb(0, 60, 190);
+    opacity: 0.7;
 
     z-index: -1;
 }
@@ -27,14 +27,14 @@ ul {
 
 /* menu__nav*/
 .menu__nav {
-    margin-left: 6%;
+    margin-left: 10%;
 
 }
 
 .menu__nav li {
     float: left;
-    margin-top: 15px;
-    margin-bottom: 15px;
+    margin-top: 20px;
+    margin-bottom: 20px;
     margin-left: 30px;
     margin-right: 30px;
 
@@ -47,22 +47,22 @@ ul {
 }
 
 .menu__nav li img{
-    width: 24px;
+    width: 50px;
 
 }
 /**/
 
 /*menu_iconos*/
 .menu__icons li img {
-    width:50px;
+    width:24px;
 }
 
 .menu__icons li {
     float:left;
     margin-top: 5px;
     margin-bottom: 5px;
-    margin-left: 5px;
-    margin-right: 5px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 /**/
 
