--- a/pagina-web/src/app/nav-bar/nav-bar.component.html
+++ b/pagina-web/src/app/nav-bar/nav-bar.component.html
@@ -9,7 +9,7 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" routerLink="contact">Link</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -26,7 +26,7 @@
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
           </li>
         </ul>
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" routerLink="/">
           <img src="assets/placeholder.ico" alt="placeholder" width="30"/>
         </a>
         <!--<form class="d-flex">
